Fix spacing for hero content

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ ul {
     display: flex;
     margin: 5px;
     padding: 0;
-    gap: 8px;
+    gap: 12px;
     align-items: center;
 }
 
@@ -38,7 +38,7 @@ a {
     display: flex;
     background-color: #1f2937;
     color: white;
-    justify-content: center;
+    justify-content: space-evenly;
     margin: 0;
     padding: 15px;
 }
@@ -61,11 +61,8 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 200px;
-    width: 200px;
-    flex: 1;
-    max-width: 300px;
-    margin-left: 200px;
+    height: 250px;
+    width: 300px;
 }
 
 .intro .title {
